style.css
:root {
  --title-font: 'Major Mono Display', monospace;
  --text-font: 'Roboto Mono', monospace;
  --main-bg-color: #131313;
  --secondary-bg-color: #adadad;
  --main-text-color: #f8f8f8;
  --secondary-text-color: #141414;
}

* {
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-size: 1em;
}

body {
  font-size: 62.5%;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
  font-family: var(--text-font);
}

.head-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
}

.title-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    font-family: var(--title-font);
    font-size: 500%;
    margin: 2em 2em 1em 2em;
}

.title-desc {
    font-family: var(--text-font);
    font-size: 60%;
    margin: 0.25em 0em 0.25em 0.25em;
}

.link-container {
    display: flex;
    flex-direction: row;
}

.link {
    margin: 2em;
}

.box-container {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    margin-left: 10em;
    margin-right: 10em;
}

.box-buttons-container {
    display: flex;
    flex-direction: column;
}

button {
    font-family: var(--title-font);
    color: var(--main-text-color);
    font-size: 200%;
    background-color: var(--main-bg-color);
    width: 100%;
    border: 1px solid var(--main-text-color);
    -webkit-transition: all 0.5s;
    -moz-transition: all 0.5s;
    -o-transition: all 0.5s;
    transition: all 0.5s;
    padding: 5px;
    cursor: pointer;
}

button:hover {
    color: var(--secondary-text-color);
    background-color: var(--secondary-bg-color);
}

.selected {
    color: var(--secondary-text-color);
    background-color: var(--secondary-bg-color);
}

.hidden {
    display: none !important;
}

.box-text-container {
    border: 1px solid var(--main-text-color);
    flex-grow: 1;
}

.box-text {
    font-size: 200%;
    padding: 1em;
}

.box-skills {
    font-size: 200%;
    padding: 1em;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 1em;
}

.skill-title{
    font-family: var(--title-font);
    font-size: 150%;
    text-decoration: underline;
}

.skill-items{
    padding-left: 1em;
}

@media only screen and (max-width: 768px) {
    .box-container {
        flex-direction: column;
        margin-left: 5em;
        margin-right: 5em;
    }

    .box-buttons-container {
        flex-direction: row;
    }
}

